<resources>
    <string name="app_name">PlaylistCreater</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="browse_songs">Browse Songs</string>

    <string name="nav_header_title">Playlist Maker</string>
    <string name="nav_header_subtitle">placeholder@gnail.com</string>
    <string name="nav_header_desc">Main Menu</string>

    <string name="playlistError">Error : Couldn\'t Create a Playlist…</string>
    <string name="noPlaylists">No Playlists Created…\n Please create one</string>
    <string name="loading_songs">Loading Songs :)</string>
    <string name="create_playlist">Create a Playlist</string>
    <string name="no_playlists_found_n_start_by_creating_one">No Playlists Found…\n Start by creating one!</string>
    <string name="playlist_title">Playlist Title</string>
    <string name="create_a_playlist">Create a playlist</string>
    <string name="cancel_create">Cancel Create</string>
    <string name="enter_a_title_for_your_playlist">   Enter a title for your playlist :</string>
    <string name="playlist_Title" />
    <string name="song_name">Song Name</string>
    <string name="songname">SongName</string>
    <string name="artistname">artistName</string>
    <string name="no_songs_found_in_playlist_n_start_by_adding_some">No Songs found in playlist…\n start by adding some</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">  Email</string>
    <string name="password">  Password</string>
    <string name="log_out">Log out</string>
    <string name="your_profile">Your Profile</string>
    <string name="or">Or</string>
    <string name="applogo">appLogo</string>
    <string name="welcome_n_to_continue_please_login_or_register_below">Welcome! \n to continue please Login or Register below</string>
    <string name="create_your_playlist">Create Your Playlist</string>
    <string name="title">Title:</string>
    <string name="genre">Genre:</string>
    <string name="Select_a_genre">Select a genre</string>
    <string name="enter_a_title">Enter a Title</string>
    <string name="enter_a_genre">Enter a Genre</string>
    <string name="add_an_image">Add an image</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="jazz">Jazz</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="classical">Classical</string>
    <string name="country">Country</string>
    <string name="blues">Blues</string>
    <string name="your_playlist_s">Your Playlist\'s</string>
    <string name="songs">Songs</string>
    <string name="count">Count</string>
    <string name="browse_irelands_top_50">Browse Ireland\'s \n Top 50</string>
    <string name="song_preview">Song Preview</string>
    <string name="user_display_name">User Display Name</string>
    <string name="user_email">User Email</string>
    <string name="loading_playlists">Loading…</string>
    <string name="auth_failed">Auth Failed</string>
    <string name="sign_out">Sign Out</string>
    <string name="access_control">Access Control</string>
    <string name="displayName">displayName</string>
    <string name="user_name">User name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="public_playlists">Public Playlists</string>
    <string name="profile">Profile</string>
    <string name="would_you_like_to_share_this_playlist_with_others">Would you like to Share This Playlist with others?</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="map">Map</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>
    <string name="share_playlist">Share Playlist</string>
    <string name="browse_new_releases">Browse New Releases</string>
    <string name="song_menu">Browse Songs</string>
    <string name="display_name">Display_name</string>
    <string name="like">Like this Playlist</string>
    <string name="likes">Likes</string>
    <string name="likecount">likeCount</string>
    <string name="liked_playlists">Liked Playlists</string>
    <string name="most_like_playlist">Most Like Playlist</string>
    <string name="other_playlists">Other Playlists</string>
    <string name="create_an_event">Create an Event</string>
    <string name="event_description">Event Description</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="type">Type</string>
    <string name="add_location">Add Location</string>
    <string name="update_event">Update Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete">Delete</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or_">OR</string>
    <string name="playlist_creator">Playlist Creator</string>
    <string name="please_login_or_sign_up">Please Login or Sign up</string>

</resources>