<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/createPlaylistFragment"
            android:icon="@drawable/ic_baseline_playlist_add_24"
            android:title="@string/create_playlist" />

        <item
            android:id="@+id/createEventFragment"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/create_an_event" />

        <item
            android:id="@+id/playlistFragment"
            android:icon="@drawable/ic_baseline_playlist_play_24"
            android:title="@string/your_playlists" />

        <item
            android:id="@+id/songMenuFragment"
            android:icon="@drawable/ic_baseline_library_music_24"
            android:title="@string/song_menu" />

        <item
            android:id="@+id/publicPlaylistsFragment"
            android:icon="@drawable/ic_baseline_playlist_play_24"
            android:title="@string/public_playlists" />

        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />
    </group>

    <item android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/profileFragment"
                android:icon="@drawable/ic_baseline_supervised_user_circle_24"
                android:title="@string/your_profile" />

            <item
                android:id="@+id/nav_sign_out"
                android:onClick="signOut"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
