<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colour">


    <ImageView
        android:id="@+id/logoView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/applogo"
        android:scaleType="center"
        android:src="@drawable/musiclogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <LinearLayout
        android:id="@+id/emailButton"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="95dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/emailSignInButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fui_bgEmail"
            android:drawableStart="@drawable/fui_ic_mail_white_24dp"
            android:elevation="40dp"
            android:gravity="center"
            android:paddingStart="30dip"
            android:paddingEnd="37dip"
            android:singleLine="true"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/googleButton"
        android:layout_width="312dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="49dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleSignInButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/common_google_signin_btn_icon_dark"
            android:elevation="40dp"
            android:gravity="center"
            android:paddingStart="25dip"
            android:paddingEnd="26dip"
            android:singleLine="true"
            android:text="@string/continue_with_google"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="177dp"
        android:text="@string/playlist_creator"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="128dp"
        android:text="@string/please_login_or_sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>